--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -63,117 +63,35 @@
                     <thead>
                     <tr>
                         <th>Authority</th>
-                        <th>CA, USA</th>
-                        <th>NY, USA</th>
-                        <th>NRW, DE</th>
+                        {% for location in payload['locations'] %}
+                            <th>{{ location }}</th>
+                        {% endfor %}
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Let's Encrypt</td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.int-x3.letsencrypt.org/</td>
-                        <td>
-                            <span class="glyphicon glyphicon-ok-sign good"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-warning-sign questionable"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-remove-sign bad"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.int-x3.letsencrypt.org</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.int-x1.letsencrypt.org/</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>cPanel, Inc.</td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.comodoca.com</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>COMODO CA Limited</td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.comodoca4.com</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.comodoca.com</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.comodoca2.com</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>http://ocsp.comodoca3.com</td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                        <td>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                        </td>
-                    </tr>
+                    {% for entry in payload['data'] %}
+                        <tr>
+                            <td>{{ entry['authority'] }}</td>
+                        </tr>
+                        {% for endpoint in entry['endpoints'] %}
+                            <tr>
+                                <td>{{ endpoint['url'] }}</td>
+                                {% for status in endpoint['statuses'] %}
+                                    <td>
+                                        {% if status == 'good' %}
+                                            <span class="glyphicon glyphicon-ok-sign good"></span>
+                                        {% elif status == 'questionable' %}
+                                            <span class="glyphicon glyphicon-warning-sign questionable"></span>
+                                        {% elif status=='bad' %}
+                                            <span class="glyphicon glyphicon-remove-sign bad"></span>
+                                        {% else %}
+                                            <span class="glyphicon glyphicon-question-sign"></span>
+                                        {% endif %}
+                                    </td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
