--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -54,7 +54,10 @@
 {% block content %}
     <div class="header">
         <div class="container">
-            <h1>OCSP Dashboard</h1>
+            <h1>
+                OCSP Dashboard
+                <small><a href="{{ url_for('admin.index') }}">Admin</a></small>
+            </h1>
         </div>
     </div>
 
