Only show admin if in debug mode.

--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <h1>
                 OCSP Dashboard
-                <small><a href="{{ url_for('admin.index') }}">Admin</a></small>
+                {% if config['DEBUG'] %}<small><a href="{{ url_for('admin.index') }}">Admin</a></small>{% endif %}
             </h1>
         </div>
     </div>
