--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -4,7 +4,17 @@
 {% import "bootstrap/fixes.html" as fixes %}
 {% import "bootstrap/utils.html" as util %}
 
-{% block title %}OCSPdash{% endblock %}
+{% block title %}OCoSPdash{% endblock %}
+
+{% block scripts %}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/popper.min.js"></script>
+    {{ super() }}
+    <script>
+    $(function () {
+        $('[data-toggle="popover"]').popover()
+    })
+    </script>
+{% endblock %}
 
 {% block styles %}
     {{ super() }}
@@ -29,6 +39,21 @@
         .not-current td {
             background-color: #DDD;
         }
+        .popover table {
+            font-size: 70%;
+            border: 1px solid #EEE;
+        }
+        .popover table tr:nth-child(even) {
+            background-color: #EEE;
+        }
+        .popover table td {
+            padding: 2px;
+        }
+        .popover table tr td:nth-child(1) {
+            font-weight: bold;
+            text-align: right;
+            border-right: 1px solid #EEE;
+        }
     </style>
 {% endblock %}
 
@@ -49,30 +74,30 @@
                 <tr>
                     <th></th>
                     {% for location in payload['locations'] %}
-                        <th class="text-center">{{ location.name }}</th>
+                        <th class="text-center">{# <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="{{ location.key_id }}"> #}
+                            {{ location.name }}
+                        {# </span> #}</th>
                     {% endfor %}
                 </tr>
                 </thead>
                 <tbody>
-                {% for section_name, rows in payload['sections'].items() %}
+                {% for authority in payload['authorities'] %}
                     <tr>
-                        <td colspan="{{ 1 + payload['locations']|length }}">
-                            {{ section_name }}
+                        <td colspan="{{ 1 + payload['locations'] | length }}">
+                            {# <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="{{ '{:,}'.format(authority['authority'].cardinality) }}"> #}
+                                {{ authority['authority'].name }}
+                            {# </span> #}
                         </td>
                     </tr>
-                    {% for row in rows %}
-                        <tr {% if not row[1] %}class="not-current"{% endif %}>
-                            <td>{{ row[0] }}</td>
-                            {% for result in row[2:] %}
+                    {% for responder in authority['responders'] %}
+                        <tr {# {% if not row[1] %}class="not-current"{% endif %} #}>
+                            <td>{# <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="{{ '{:,}'.format(responder['responder'].cardinality) }}"> #}
+                                {{ responder['responder'].url }}
+                            {# </span> #}</td>
+                            {% for result in responder['results'] %}
                                 <td class="text-center">
                                     {% if result is not none %}
-                                        {% if result.status.value == 'good' %}
-                                            <span class="glyphicon glyphicon-ok-sign text-success"></span>
-                                        {% elif result.status.value == 'questionable' %}
-                                            <span class="glyphicon glyphicon-warning-sign text-warning"></span>
-                                        {% elif result.status.value == 'bad' %}
-                                            <span class="glyphicon glyphicon-remove-sign text-danger"></span>
-                                        {% endif %}
+                                        <span class="glyphicon {% if result.status.value == 'good' %}glyphicon-ok-sign text-success{% elif result.status.value == 'questionable' %}glyphicon-warning-sign text-warning{% elif result.status.value == 'bad' %}glyphicon-remove-sign text-danger{% endif %}" data-toggle="popover" data-trigger="click" data-placement="top" data-html="true" data-content="<table><tbody><tr><td>Ping</td><td>{{ result.ping }}</td></tr><tr><td>OCSP</td><td>{{ result.ocsp }}</td></tr><tr><td>Retrieved</td><td>{{ result.retrieved }}</td></tr><tr><td>Chain ID</td><td>{{  result.chain.certificate_chain_uuid | string }}</td></tr></tbody></table>"></span>
                                     {% else %}
                                         <span class="glyphicon glyphicon-question-sign text-muted"></span>
                                     {% endif %}
