--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -4,7 +4,7 @@
 {% import "bootstrap/fixes.html" as fixes %}
 {% import "bootstrap/utils.html" as util %}
 
-{% block title %}OCoSPdash{% endblock %}
+{% block title %}OCSPdash{% endblock %}
 
 {% block scripts %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/popper.min.js"></script>
