Use related colors for "red" and "yellow"
Rename sprite svg

--- a/src/ocspdash/web/static/sprite.css
+++ b/src/ocspdash/web/static/sprite.css
@@ -1,5 +1,5 @@
 .svg {
-    background: url("svg/sprite.css-893944c7.svg") no-repeat;
+    background: url("svg/sprite.svg") no-repeat;
     background-size: auto 100%;
     display: inline-block;
     width: 16px;
