--- a/src/ocspdash/web/templates/index.html
+++ b/src/ocspdash/web/templates/index.html
@@ -62,7 +62,7 @@
     <div class="header">
         <div class="container">
             <h1>
-                OCSP Dashboard
+                OCSPdash
                 {% if config['DEBUG'] %}<small><a href="{{ url_for('admin.index') }}">Admin</a></small>{% endif %}
             </h1>
         </div>
